Fixed clearTrackingTable bug deleting incorrect elements Removed border when input is focused. Prevents overlapping border and box-shadow. Cleared tracking table To-Do Removed "clear slothtime.css from cache" hack Reviewed features, Todos, and hacks, removed completed ones: - clicking on FAB twice doesn't hide menu, resolved - When table is deleted, new row is created with old number, resovled - HACK, remove slothtime.css from cache if loaded, was temp fix, resolved new TODO - add smooth animation to FAB buttons

--- a/public/static/styles/er_apps_styles.css
+++ b/public/static/styles/er_apps_styles.css
@@ -238,7 +238,7 @@ option:focus {
 }
 
 .form-control:focus {
-   border-color: var(--sub-color);
+   border: none;
    box-shadow: 0 0 0 0.05rem var(--main-color);
 }
 
@@ -417,7 +417,7 @@ textarea {
 }
 
 /**** FAB Buttons ****/
-
+/* TODO add smooth open animation to menu */
 /* Fabs DIV */
 .fabs {
    --_viewport-margin: 2.5vmin;
